# VisionEngine

./: BoxProcessor.cpp  BoxProcessor.h  CMakeLists.txt  HalconDecoder.cpp  HalconDecoder.h  Logger.cpp  Logger.h  OBBCropper.cpp  OBBCropper.h  README.md  README_en.md  VisionAPI.cpp  VisionAPI.h  VisionEngine.cpp  VisionEngine.h  VisionEngine.sln  VisionEngine.vcxproj  VisionEngine.vcxproj.filters  VisionResult.h  VisionTypes.h  YoloEngine.cpp  YoloEngine.h  YoloTypes.h  export_onnx.py
VisionEngine/x64/Debug/: VisionEngine.dll.recipe  VisionEngine.ilk  vc143.idb
VisionEngine/x64/Debug/VisionEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VisionEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
VisionEngine/x64/Release/: VisionEngine.dll.recipe  VisionEngine.iobj  VisionEngine.ipdb
VisionEngine/x64/Release/VisionEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VisionEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Release/: VisionEngine.exp  VisionEngine.lib
